--- a/week02/box-model.html
+++ b/week02/box-model.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en-US">
-    <link rel="stylesheet" href="week02/styles/box-model.css">
+    <link rel="stylesheet" href="styles/box-model.css">  
     <meta charset="utf-8">
            <meta name="viewport" content="width=device-width,initial-scale=1.0">
               <main>
